--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    padding: 9.55px;
+    padding: 1vh;
 }
 
 header {
@@ -64,7 +64,7 @@ header {
 .right-column p {
     font-size: 1.5rem;
     line-height: 1.6;
-    padding: 19.1px;
+    padding: 2vh;
 }
 
 p.email {
@@ -75,12 +75,12 @@ p.email {
     display: inline-block;
     right: 0;
     position: absolute;
-    margin-right: 0;
-    width: 192px;
-    height: 28.65px;
+    margin-right: 0vw;
+    width: 10vw;
+    height: 3vh;
     border-top: 0px solid transparent;
-    border-bottom:  47.75px solid transparent;
-    border-right: 1824px solid rgb(44, 158, 3);
+    border-bottom: 5vh solid transparent;
+    border-right: 95vw solid rgb(44, 158, 3);
     border-bottom-left-radius: 10%;
     transform: rotate(0.5deg);
 }
@@ -88,14 +88,14 @@ p.email {
 .triangulo-abaixo {
     display: inline-block;
     position: absolute;
-    margin-top: 38.4px;
+    margin-top: 2vw;
     right: 0;
-    margin-right: 0;
-    width: 192px;
-    height:  28.65px;
+    margin-right: 0vw;
+    width: 10vw;
+    height: 3vh;
     border-top: 0px solid transparent;
-    border-bottom: 28.65px solid transparent;
-    border-right: 1632px solid rgb(30, 105, 2);
+    border-bottom: 3vh solid transparent;
+    border-right: 85vw solid rgb(30, 105, 2);
     border-bottom-left-radius: 10%;
     transform: rotate(2deg);
 }
@@ -105,8 +105,8 @@ p.email {
     padding: auto;
     height: 0;
     border-top: 0px solid transparent;
-    border-bottom: 28.65px solid transparent;
-    border-left: 1632px solid rgb(30, 105, 2);
+    border-bottom: 3vh solid transparent;
+    border-left: 85vw solid rgb(30, 105, 2);
     transform: rotate(2deg);
 }
 
@@ -115,8 +115,8 @@ p.email {
     width: 1px;
     height: 0;
     border-top: 0px solid transparent;
-    border-bottom: 38.2px solid transparent;
-    border-left: 1824px solid rgb(44, 158, 3);
+    border-bottom: 4vh solid transparent;
+    border-left: 95vw solid rgb(44, 158, 3);
     transform: rotate(0.5deg);
 }
 .grafico{
